--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Gujarati</span></li>
 									<!-- <li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp; Tableau</span></li> -->
-									<li class="d-flex"><span>Other Skills:</span> <span>problem solving, critical thinking, communication, Teamwork, Adaptability, Multitasking </span></li>
+									<li class="d-flex"><span>Soft Skills:</span> <span>problem solving, critical thinking, communication, Teamwork, Adaptability, Multitasking </span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Programming, Traveling, Cricket, Gamming, Music</span></li>
 									
 								</ul>
