--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <!-- <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li> -->
+	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -393,16 +393,16 @@
 
    
 
-    <!-- <section class="ftco-section" id="project-section">
+    <section class="ftco-section" id="project-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-             <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p> 
+             <!-- <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>  -->
           </div>
         </div>
-        <div class="row d-flex">
+        <!-- <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
@@ -437,28 +437,28 @@
             </div>
           </div>
         </div>
-	<br>
-		 added justify-content-center to center align the last two projects 
+	<br> -->
+		 <!-- added justify-content-center to center align the last two projects  -->
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/miranijay/ML-algo.git" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpeg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast- Time Series Forecasting</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading"><a href="https://github.com/miranijay/ML-algo.git">WATER QUALITY PREDICTION USING MACHINE LEARNING ALGORITHMS</a></h3>
+				  <p>Used multiple machine learning algorithms to predict that water is drinkable or not based on parameters.</p>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="https://github.com/miranijay/canteen_odering_system.git" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpeg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading"><a href="https://github.com/miranijay/canteen_odering_system.git">CANTEEN ORDERING SYSTEM</a></h3>
+				  <p>This Project aims to develop a user friendly, web-based application that simplifies the process of ordering food, making payments and managing inventory for both canteen staff and customers.</p>
 				</div>
 			  </div>
 			</div>
@@ -466,7 +466,7 @@
 	  </div>
     </section>
 
-	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
+	<!-- <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
       <div class="container">
 		<div class="row d-md-flex align-items-center">
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
