--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Jay Mirani</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Web Developer</span></p>
+										<p><span class="title-s">Job Role: </span> <span>Full Stack Developer</span></p>
 										<p><span class="title-s">Experience: </span> <span>Fresher</span></p>
 										<p><span class="title-s">Address: </span> <span>Gujarat, India</span></p>
 									  </div>
@@ -242,7 +242,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>JavaScript - </span> <span class="pull-right">80%</span>
+									<span>JavaScript - </span> <span class="pull-right"65%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
