--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>JavaScript - </span> <span class="pull-right"65%</span>
+									<span>JavaScript - </span> <span class="pull-right">65%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+										<div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									
