--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'Engineer  ',
-						'Web developer  ',
 						'Full Stack Developer   ',
+						'ML Engineer  ',
 						];
 
 						// Create a function to display the typing animation for a given text
