--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 								
 								<p>I am a recent B.Tech graduate eager to kickstart my career as a web developer or full-stack developer. I possess strong skills in HTML/CSS, JavaScript, C/C++, Python, SQL, and more. Dedicated and quick to adapt, I am enthusiastic about contributing to innovative projects and growing within a dynamic team.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Web Developer &amp; Full Stack Developer</span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Full Stack Developer &amp; ML Engineer</span></li>
 									<!-- <li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li> -->
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Gujarati</span></li>
