--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Versatile candidate seeking roles as a Full Stack Developer and web developer. Proficient in HTML/CSS, Javascript, SQL, machine learning, C/C++, and certified in relevant areas. Expanding expertise in full stack development with modern technologies. Ready to contribute, learn from experienced developers, and work on innovative projects.</p>
+            <p>I am a Full Stack Developer with hands-on skills in React.js, Node.js, JavaScript, HTML/CSS, and SQL, focused on building modern web applications. I also have expertise in Python and machine learning, with experience in predictive modeling. Versatile and eager to learn, I am passionate about solving real-world problems through innovative web solutions and AI-driven technologies.</p>
           </div>
         </div>
 
