--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>I am a recent B.Tech graduate eager to kickstart my career as a full-stack developer or ML Engineer. I possess strong skills in HTML/CSS, JavaScript, C/C++, Python, SQL, and more. Dedicated and quick to adapt, I am enthusiastic about contributing to innovative projects and growing within a dynamic team.</p>
+								<p>I am a recent B.Tech graduate eager to kickstart my career as a full-stack developer or ML Engineer. I possess strong skills in HTML/CSS, JavaScript, ReactJS, NodeJS, Python(ML), SQL, and more. Dedicated and quick to adapt, I am enthusiastic about contributing to innovative projects and growing within a dynamic team.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Full Stack Developer &amp; ML Engineer</span></li>
 									<!-- <li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li> -->
